--- a/css/styles.css
+++ b/css/styles.css
@@ -5,24 +5,28 @@ body{
 
 .row-content{
     background-color: #F5F5F5;
-    
 }
 .card-margin{
     margin-top: 30px;
     margin-bottom: 30px;
 }
-.card-img-top-left {
+.img-size {
 
     height: 150px;
     object-fit:contain;
     padding: 30px 0px 0px 0px;
+    
+}
+.separate-items{
+    display: flex;
+    justify-content: space-between;
 }
 
 .description-subtitle{
     padding: 30px 0px 0px 20px;
 }
 
-.btn-test{
+.btn-job{
     color: 	#32CD32;
     background: rgba(152,251,152,.5);
 }
